--- a/index.html
+++ b/index.html
@@ -3,118 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Motion Project</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Physic 1: Rocket Motion Project</title>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>PHYSIC 1: ROCKET MOTION PROJECT</h1>
-        <h3>2452192: Đoàn Công Duy | 2452900: Đoàn Ngọc Uyên Nhi | 2452493: Hồ Sĩ Quốc Khánh | 2452576: Hoàng Nguyễn Anh Khôi | 2450018: Hứa Tuệ Minh</h3>
+        <h1 style="color: #ED3EF7; font-family: 'Abril Fatface', cursive;">PHYSIC 1: ROCKET MOTION PROJECT</h1>
+        <h3 style="font-family: 'Lato', sans-serif; color: #26355D;">2452192: Đoàn Công Duy | 2452900: Đoàn Ngọc Uyên Nhi | 2452493: Hồ Sĩ Quốc Khánh | 2452576: Hoàng Nguyễn Anh Khôi | 2450018: Hứa Tuệ Minh</h3>
     </header>
 
     <main>
+        <!-- Section 1: About the Project -->
         <section class="intro">
-            <h2>About the Project</h2>
-            <p>This project involves simulating rocket motion using mathematical models and displaying dynamic graphs. You can explore both the full MATLAB code explanation and input your parameters for real-time visualization.</p>
+            <h2 style="color: #ED3EF7; font-family: 'Abril Fatface', cursive;">I. About the Project</h2>
+            <p>This project focuses on simulating rocket motion under the influence of gravity, fuel combustion, and air resistance. It involves calculating symbolic and numerical solutions, plotting graphs, and providing a clear, visual understanding of the rocket's trajectory.</p>
+            <h3 style="color: #0B2F9F;">Team Members</h3>
+            <ul style="list-style-type: disc; margin-left: 20px;">
+                <li>2452192: Đoàn Công Duy</li>
+                <li>2452900: Đoàn Ngọc Uyên Nhi</li>
+                <li>2452493: Hồ Sĩ Quốc Khánh</li>
+                <li>2452576: Hoàng Nguyễn Anh Khôi</li>
+                <li>2450018: Hứa Tuệ Minh</li>
+            </ul>
         </section>
 
-<section class="code">
-    <h2>MATLAB Code and Explanation</h2>
-    <p>The MATLAB program simulates the motion of a rocket considering fuel combustion, gravity, and air resistance. It computes symbolic and numerical solutions for mass, velocity, and position over time, and generates dynamic graphs for visualization.</p>
-
-    <article>
-        <h3>Key Features</h3>
-        <ul>
-            <li>Symbolic calculations for motion equations.</li>
-            <li>Dynamic visualization of Mass, Velocity, and Position over Time.</li>
-            <li>Key MATLAB functions: <code>syms</code>, <code>int</code>, <code>cumtrapz</code>, <code>plot</code>.</li>
-        </ul>
-    </article>
-
-    <article>
-        <h3>MATLAB Code Overview</h3>
-        <p><strong>1. Input Parameters:</strong> Users provide fuel combustion speed, initial mass, position, gas propulsion speed, and other parameters.</p>
-        <p><strong>2. Symbolic Calculations:</strong> Determines mass, velocity, and position equations over time using symbolic integration.</p>
-        <p><strong>3. Numerical Simulation:</strong> Generates time-based vectors for numerical mass, velocity, and position calculations.</p>
-        <p><strong>4. Visualization:</strong> Plots three key graphs—Mass vs Time, Velocity vs Time, Position vs Time.</p>
-    </article>
-
-    <article>
-        <h3>Full MATLAB Code</h3>
-        <pre>
+        <!-- Section 2: MATLAB Code and Explanation -->
+        <section class="code">
+            <h2 style="color: #ED3EF7; font-family: 'Abril Fatface', cursive;">II. MATLAB Code and Explanation</h2>
+            <article>
+                <h3 style="color: #0B2F9F;">Key Features</h3>
+                <ul>
+                    <li>Derives symbolic equations for mass, velocity, and position.</li>
+                    <li>Simulates rocket motion using real-world physics formulas.</li>
+                    <li>Visualizes motion with graphs: Mass vs Time, Velocity vs Time, Position vs Time.</li>
+                </ul>
+            </article>
+            <article>
+                <h3 style="color: #0B2F9F;">MATLAB Code Overview</h3>
+                <p>The MATLAB code calculates motion based on <strong>Newton's Second Law</strong>. The following equations govern the simulation:</p>
+                <ul>
+                    <li><strong>Mass:</strong> \( m(t) = m_0 - \frac{dm}{dt} \cdot t \)</li>
+                    <li><strong>Velocity:</strong> \( v(t) = v_{\text{gas}} \cdot \ln\left(\frac{m_0}{m}\right) - g \cdot t \)</li>
+                    <li><strong>Position:</strong> Integration of \( v(t) \) to find \( x(t) \).</li>
+                </ul>
+                <p>The program visualizes these equations numerically and symbolically for better analysis.</p>
+                <div style="background-color: black; color: white; padding: 10px; border-radius: 5px; font-family: monospace;">
+                    <pre>
 % MATLAB Program for Rocket Motion Analysis
 clear; clc;
-fprintf('Enter the parameters for rocket motion:\n');
 dm_dt = input('Fuel combustion speed [kg/s]: '); 
 m0 = input('Initial mass of the rocket [kg]: ');
-x0 = input('Initial position [m]: ');
-v_gas = input('Gas propulsion speed [m/s]: ');
-t_end = input('Simulation end time [s]: ');
-g = input('Gravitational acceleration [m/s^2]: ');
+...
+                    </pre>
+                </div>
+            </article>
+        </section>
 
-syms t
-m = m0 - dm_dt * t;
-v_rocket = v_gas * log(m0 / m) - g * t;
-x_rocket = int(v_rocket, t) + x0;
-
-time = linspace(0, t_end, 100);
-m_num = m0 - dm_dt * time;
-fuel_depletion_time = m0 / dm_dt;
-v_rocket_num = zeros(size(time));
-x_rocket_num = zeros(size(time));
-
-for i = 1:length(time)
-    if time(i) <= fuel_depletion_time
-        m_t = m0 - dm_dt * time(i);
-        v_rocket_num(i) = v_gas * log(m0 / m_t) - g * time(i);
-    else
-        v_rocket_num(i) = v_rocket_num(find(time <= fuel_depletion_time, 1, 'last')) - g * (time(i) - fuel_depletion_time);
-    end
-end
-
-x_rocket_num = cumtrapz(time, v_rocket_num) + x0;
-
-subplot(3, 1, 1);
-plot(time, max(0, m_num)); title('Mass vs Time');
-xlabel('Time [s]'); ylabel('Mass [kg]');
-
-subplot(3, 1, 2);
-plot(time, v_rocket_num); title('Velocity vs Time');
-xlabel('Time [s]'); ylabel('Velocity [m/s]');
-
-subplot(3, 1, 3);
-plot(time, x_rocket_num); title('Position vs Time');
-xlabel('Time [s]'); ylabel('Position [m]');
-        </pre>
-    </article>
-</section>
-
+        <!-- Section 3: Simulation -->
         <section class="simulation">
-            <h2>Simulation</h2>
+            <h2 style="color: #ED3EF7; font-family: 'Abril Fatface', cursive;">III. Simulation</h2>
             <form id="rocketForm">
-                <label for="dm_dt">Fuel combustion speed (dm/dt) [kg/s]:</label>
-                <input type="number" id="dm_dt" step="0.1" required>
-
-                <label for="m0">Initial mass of the rocket (m0) [kg]:</label>
-                <input type="number" id="m0" step="0.1" required>
-
-                <label for="x0">Initial position of the rocket (x0) [m]:</label>
-                <input type="number" id="x0" step="0.1" required>
-
-                <label for="v_gas">Rocket gas propulsion speed (v_gas) [m/s]:</label>
-                <input type="number" id="v_gas" step="0.1" required>
-
-                <label for="t_end">End time for simulation [s]:</label>
-                <input type="number" id="t_end" step="1" required>
-
-                <label for="g">Gravitational acceleration (g) [m/s²]:</label>
-                <input type="number" id="g" step="0.1" required>
-
-                <label for="k">Air resistance coefficient (k) [Ns/m]:</label>
-                <input type="number" id="k" step="0.1" required>
-
-                <button type="button" onclick="runSimulation()">Run Simulation</button>
+                <div class="input-group">
+                    <label for="dm_dt">Fuel combustion speed (dm/dt) [kg/s]:</label>
+                    <input type="number" id="dm_dt" step="0.1" required>
+                </div>
+                <div class="input-group">
+                    <label for="m0">Initial mass of the rocket (m0) [kg]:</label>
+                    <input type="number" id="m0" step="0.1" required>
+                </div>
+                <div class="input-group">
+                    <label for="x0">Initial position of the rocket (x0) [m]:</label>
+                    <input type="number" id="x0" step="0.1" required>
+                </div>
+                <div class="input-group">
+                    <label for="v_gas">Rocket gas propulsion speed (v_gas) [m/s]:</label>
+                    <input type="number" id="v_gas" step="0.1" required>
+                </div>
+                <div class="input-group">
+                    <label for="t_end">End time for simulation [s]:</label>
+                    <input type="number" id="t_end" step="1" required>
+                </div>
+                <div class="input-group">
+                    <label for="g">Gravitational acceleration (g) [m/s²]:</label>
+                    <input type="number" id="g" step="0.1" required>
+                </div>
+                <button type="button" id="simulateButton">Run Simulation</button>
             </form>
             <div id="charts">
                 <canvas id="massChart"></canvas>
@@ -125,7 +99,7 @@ xlabel('Time [s]'); ylabel('Position [m]');
     </main>
 
     <footer>
-        <p>Group 3 - Class: CC04 | November, 2024</p>
+        <p style="font-family: 'Lato', sans-serif; text-align: center;">Group 3 - Class: CC04 | November, 2024</p>
     </footer>
 
     <script src="script.js"></script>
