--- a/index.html
+++ b/index.html
@@ -103,5 +103,7 @@ m0 = input('Initial mass of the rocket [kg]: ');
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 </html>
